log/build_2025-02-03_17-03-28/rover_driver_base/stderr.log
  File "/home/GTL/apaul/ros2_hw1/install/rover_driver_base/lib/python3.10/site-packages/rover_driver_base/rover_kinematics.py", line 84
    motors.drive[k] = (twist.linear.x - twist.angular.z*drive_cfg[k].y/drive_cfg[k].radius
                      ^
SyntaxError: '(' was never closed

